@@ -37,25 +37,26 @@ EQ_ADD,		// addition x+y
 EQ_SUB,		// substraction x-y
 EQ_MUL,		// multiplication x*y
 EQ_DIV,		// division x/y
-EQ_IPOW,		// power x^n for integer n
+EQ_IPOW,	// power x^n for integer n
 EQ_POW,		// power x^y
 EQ_LOG,		// logarithm of x on base a, log_a(x) = ln(x)/ln(a)
+EQ_CMPLX,	// return a+i*b
 // normal functions of 1 argument
 EQ_SIN,		// sine function \sin(x).			!!! MUST BE FIRST 1-PLACE FUNCTION
 EQ_COS,		// cosine function \cos(x).
 EQ_TAN,		// tangent function \tan(x).
-EQ_ASIN,		// inverse sine function \asin(x).
-EQ_ACOS,		// inverse cosine function \acos(x).
-EQ_ATAN,		// inverse tangent function \atan(x).
-EQ_SINH,		// hyperbolic sine function \sinh(x).
-EQ_COSH,		// hyperbolic cosine function \cosh(x).
-EQ_TANH,		// hyperbolic tangent function \tanh(x).
+EQ_ASIN,	// inverse sine function \asin(x).
+EQ_ACOS,	// inverse cosine function \acos(x).
+EQ_ATAN,	// inverse tangent function \atan(x).
+EQ_SINH,	// hyperbolic sine function \sinh(x).
+EQ_COSH,	// hyperbolic cosine function \cosh(x).
+EQ_TANH,	// hyperbolic tangent function \tanh(x).
 EQ_ASINH,	// inverse hyperbolic sine function \asinh(x).
 EQ_ACOSH,	// inverse hyperbolic cosine function \acosh(x).
 EQ_ATANH,	// inverse hyperbolic tangent function \atanh(x).
-EQ_SQRT,		// square root function \sqrt(x)
+EQ_SQRT,	// square root function \sqrt(x)
 EQ_EXP,		// exponential function \exp(x)
-EQ_EXPI,		// exponential function \exp(i*x)
+EQ_EXPI,	// exponential function \exp(i*x)
 EQ_LN,		// logarithm of x, ln(x)
 EQ_LG,		// decimal logarithm of x, lg(x) = ln(x)/ln(10)
 EQ_ABS,		// absolute value
@@ -179,6 +180,7 @@ mglFormulaC::mglFormulaC(const char *string)
 		else if(!strcmp(name,"real")) Kod=EQ_REAL;
 		else if(!strcmp(name,"imag")) Kod=EQ_IMAG;
 		else if(!strcmp(name,"norm")) Kod=EQ_NORM;
+		else if(!strcmp(name,"cmplx")) Kod=EQ_CMPLX;
 		else {	delete []str;	return;	}	// unknown function
 		n=mglFindInText(str,",");
 		if(n>=0)
@@ -238,6 +240,7 @@ dual MGL_LOCAL_CONST divc(dual a,dual b)	{return a/b;}
 dual MGL_LOCAL_CONST ipwc(dual a,dual b)	{return mgl_ipowc(a,int(b.real()));}
 dual MGL_LOCAL_CONST powc(dual a,dual b)	{return exp(b*log(a));	}
 dual MGL_LOCAL_CONST llgc(dual a,dual b)	{return log(a)/log(b);	}
+dual MGL_LOCAL_CONST cmplxc(dual a,dual b)	{return a+dual(0,1)*b;	}
 dual MGL_LOCAL_CONST expi(dual a)	{	return exp(dual(0,1)*a);	}
 dual MGL_LOCAL_CONST expi(double a)	{	return dual(cos(a),sin(a));	}
 //-----------------------------------------------------------------------------
@@ -267,7 +270,7 @@ dual MGL_LOCAL_CONST normc(dual x)	{	return norm(x);	}
 //-----------------------------------------------------------------------------
 typedef dual (*func_1)(dual);
 typedef dual (*func_2)(dual, dual);
-static const func_2 f2[EQ_SIN-EQ_LT] = {cltc,cgtc,ceqc,addc,subc,mulc,divc,ipwc,powc,llgc};
+static const func_2 f2[EQ_SIN-EQ_LT] = {cltc,cgtc,ceqc,addc,subc,mulc,divc,ipwc,powc,llgc,cmplxc};
 static const func_1 f1[EQ_LAST-EQ_SIN] = {sinc,cosc,tanc,asinc,acosc,atanc,sinhc,coshc,tanhc,
 					asinhc,acoshc,atanhc,sqrtc,expc,expi,logc,lgc,absc,argc,conjc,realc,imagc,normc};
 // evaluation of embedded (included) expressions
